Hand buyers a download landing page instead of a signed file, and compile on JDK 17 laptops.
Co-authored-by: Cursor <cursoragent@cursor.com>